# project-skuld

./: .gitignore  LICENSE  README.adoc  devlog.adoc
cat/deprecated!=nn-c-test/handmade-nn/: main.cpp
cat/nn-c-test/fann-nn/: main.cpp
cat/nn-c-test/handmade-nn/: class
cat/nn-python/: N-size-test.ipynb  [RESEARCH]-N-size.ipynb  [RESEARCH]-physics2d-shapes.ipynb  example_integration.py  genz-plotter.py  genz-test-functions.ipynb  histories  i2_plotter.py  k-size-distribution-test.ipynb  physics2d-lib-test.ipynb  physics2d-test.py  results
cat/nn-python-test/: 2-dim-test.ipynb  nni-1d.ipynb  nni-tutorial.ipynb  physics-nni-2d-correct.ipynb  torch-nni-test.ipynb  torch-nni-with-custom-integration-function.ipynb
cat/nn-python/archive/: nni-1d.ipynb  physics-nni-2d-correct.ipynb  skuld_demo.py  torch-nni-with-custom-integration-function.ipynb
cat/nn-python/cucumbers/: SUD-all-rests.pkl  all-maes.pkl
cat/nn-python/genz/: genz_functions.py
cat/nn-python/global/: global_definitions.py
cat/nn-python/main-notebooks/: NG-all-maes.pkl  (+18 more)
diploma-text/: bibliography.bib  main.tex
diploma-text/ITTMM-2025-paper/: ITTMM_2025.tex  bib.bib  clean-template.tex  main.bib  main.tex  plots.numbers
diploma-text/ITTMM-2025-report/: ittmm.cls  main.tex
research/: i3-adaptive.py  i3-distributions-experiment.py  i3-ksize-test.py  i3.py  test-i3-15.txt
research/legacy/skuld-v0.2.0/: __init__.py  generators.py  model.py  nni.py  pyproject.toml  scalers.py
research/utils/: paths.py
skuld-lib/: pyproject.toml
skuld-lib/skuld/: __init__.py  generators.py  nni.py  scalers.py
(+130 files in other folders)
